--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="order">
             <div class="order__container container">
                 <h1 class="order__title">Эффективные решения <br> для вашего бизнеса</h1>
-                <button type="button" class="order__button">Заказать услугу</button>
+                <button data-modal-open type="button" class="order__button">Заказать услугу</button>
             </div>
         </section>
         <section class="peculiarities section">
@@ -366,5 +366,16 @@
             </div>
         </div>
     </footer>
+
+    <div data-modal class="backdrop is-hidden">
+        <div class="backdrop__modal">
+            <div data-modal-close class="backdrop__close">
+                <svg width="11" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11 1.108L9.892 0 5.5 4.392 1.108 0 0 1.108 4.392 5.5 0 9.892 1.108 11 5.5 6.608 9.892 11 11 9.892 6.608 5.5 11 1.108z" fill="#000"/>
+                </svg>
+            </div>
+        </div>
+    </div>
+<script src="./js/modal.js"></script>
 </body>
 </html>
