--- a/index.html
+++ b/index.html
@@ -385,10 +385,9 @@
     <div data-modal class="backdrop is-hidden">
         <div class="backdrop__modal modal">
             <div data-modal-close class="backdrop__close">
-                <svg width="11" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="11" height="11" xmlns="http://www.w3.org/2000/svg">
                     <path
-                        d="M11 1.108L9.892 0 5.5 4.392 1.108 0 0 1.108 4.392 5.5 0 9.892 1.108 11 5.5 6.608 9.892 11 11 9.892 6.608 5.5 11 1.108z"
-                        fill="#000" />
+                        d="M11 1.108L9.892 0 5.5 4.392 1.108 0 0 1.108 4.392 5.5 0 9.892 1.108 11 5.5 6.608 9.892 11 11 9.892 6.608 5.5 11 1.108z"/>
                 </svg>
             </div>
             <p class="modal__title">
@@ -399,29 +398,23 @@
                     <li class="modal__item">
                         <label class="modal__lable" for="name">Имя</label>
                         <input class="modal__input" type="text" name="name" id="name" placeholder=" " />
-                        <div class="modal__icon">
-                            <svg width="18px" height="18px">
+                            <svg class="modal__icon" width="18px" height="18px">
                                 <use href="./img/icons.svg#icon-user"></use>
                             </svg>
-                        </div>
                     </li>
                     <li class="modal__item">
                         <label class="modal__lable" for="phone">Телефон</label>
                         <input class="modal__input" type="tel" name="phone" id="name" placeholder=" " />
-                        <div class="modal__icon">
-                            <svg width="18px" height="18px">
+                            <svg class="modal__icon" width="18px" height="18px">
                                 <use href="./img/icons.svg#icon-phone"></use>
                             </svg>
-                        </div>
                     </li>
                     <li class="modal__item">
                         <label class="modal__lable" for="mail">Почта</label>
                         <input class="modal__input" type="email" name="mail" id="name" placeholder=" " />
-                        <div class="modal__icon">
-                            <svg width="18px" height="18px">
-                                <use href="./img/icons.svg#icon-env"></use>
+                            <svg class="modal__icon" width="18px" height="18px">
+                                <use href="./img/icons.svg#icon-envelope2"></use>
                             </svg>
-                        </div>
                     </li>
                     <div class="modal__comment comment">
                         <label class=comment__label for="comment">Комментарий</label>
@@ -430,10 +423,10 @@
                 </ul>
                 <label class="modal__agreement">
                     <input class="modal__checkbox" type="checkbox" name="policy">
-                    <span class="checkbox__icon"></span>
-                    <span>Соглашаюсь с рассылкой и принимаю <a class="modal__link" href="#"> Условия договора</a></span>
+                    <div class="checkbox__icon"></div>
+                    <span class="modal__text">Соглашаюсь с рассылкой и принимаю <a class="modal__link" href="#"> Условия договора</a></span>
                 </label>
-                <button class="modal__button" type="submit">Отправить</button>
+                <div class="modal__send"><button class="modal__button" type="submit">Отправить</button></div>
             </form>
         </div>
     </div>
