--- a/portfolio.html
+++ b/portfolio.html
@@ -274,8 +274,7 @@
                 <div class="footer__form form-footer">
                     <h3 class="form-footer__title">Подпишитесь на рассылку</h3>
                     <form class="form-footer__form">
-                        <label for="mail"></label>
-                        <input class="form-footer__input" type="email" name="mail" id="" placeholder="E-mail">
+                        <input class="form-footer__input" type="email" name="mail" id="mail" placeholder="E-mail">
                         <button class="form-footer__button" type="submit">
                             <span>Подписаться</span>
                             <svg style="width: 24px; height:24px;">
