--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Home-Work</title>
 </head>
 <body>
@@ -368,7 +368,7 @@
                 <div class="footer__form form-footer">
                     <h3 class="form-footer__title">Подпишитесь на рассылку</h3>
                     <form class="form-footer__form">
-                        <input class="form-footer__input" type="email" name="mail" id="mail" placeholder="E-mail">
+                        <input class="form-footer__input" type="email" name="mail" id="email" placeholder="E-mail">
                         <button class="form-footer__button" type="submit">
                             <span>Подписаться</span>
                             <svg style="width: 24px; height:24px;">
